# context-driven-development

./: .gitignore  Cargo.toml  README.md  justfile
.cargo-husky/hooks/: pre-commit  pre-push
.context/_reference/commands/: cdd-create-task.md  cdd-extract-lessons.md  cdd-review-tasks.md  cdd:create-task.md  create-task.md
.context/_reference/rules/: justfiles.md  rs.md
.context/_reference/scripts/: install.sh
.context/_reference/templates/: TASK.md
.context/tasks/context-core/: TASK_001-opencode-model-detection.md
.opencode/command/: cdd:create-test.md
demo/: README.md  demo-commands.sh  demo-fast.sh  demo.tape
justfiles/demo/: demo.just
justfiles/dev/: check.just  ci.just  clippy.just  dev.just  fmt.just  run.just  test.just  uninstall.just
justfiles/release/: pub.just  version.just
src/: main.rs
